  newest build from koji 
- Enhancement:
  + ChangeLog.prev is no longer required.
  + RPM-ChangeLog.prev is provide by koji now.
  + cmake-fedora-koji: 
    - new subcommand: newest-build and newest-changelog.
  + cmake-fedora-changelog: new script. 
  + ManageFile:
    - Add absolute file support
    - MANAGE_FILE_INSTALL: Add TARGETS support.
    - MANAGE_FILE_INSTALL: Add RENAME support.
    - GIT_GLOB_TO_CMAKE_REGEX: Convert git glob to cmake regex
  + ManageArchive:
    - PACK_SOURCE_CPACK: Pack with CPack
    - PACK_SOURCE_ARCHIVE: Now can specify OUTPUT_FILE.
    - SOURCE_ARCHIVE_CONTENTS_ADD: Add file to source archive.
    - SOURCE_ARCHIVE_CONTENTS_ADD_NO_CHECK: 
      Add file to source archive without checking.
    + ManageDependency: Manage dependencies.
  + ManageRPM: 
    - PACK_RPM: New options: SPEC_IN and SPEC.
  + ManageString:
    - STRING_APPEND: Append a string to a variable.
    - STRING_PADDING: Padding the string to specified length
  + ManageTranslation:
    - MANAGE_GETTEXT: 
      + Can specify MSGFMT_OPTIONS and MSGMERGE_OPTIONS
      + Add gettext-devel to BUILD_REQUIRES.
  + ManageVariable:
    - VARIABLE_TO_ARGN: Merge the variable and options to 
      the form of ARGN.
  + Cached variables:
    - RPM_SPEC_CMAKE_FLAG: cmake flags in rpm build.
    - RPM_SPEC_MAKE_FLAG: make flags in rpm build.
    - Changed Modules:
  + ManageArchive:
    - PACK_SOURCE_ARCHIVE: Can now pass either 
      empty, outputDir, or source File. 
  + ManageGConf2: Fixed.
  + ManageString: STRING_SPLIT: New Option: ALLOW_EMPTY
  + ManageRPM
    - Add support of pre, post, and preun
  + ManageVariable:
    - VARIABLE_PARSE_ARGN can now handle multiple-appeared options.
- Changed:
  + CMake policy no longer enforced by default.
  + ManageString: STRING_SPLIT is changed from macro to function,
    so no need to put excessive backslashes.
- Removed:
  + Target after_release_commit and related are no longer required 
    and thus removed.